# testing

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
data/: F18-ABCD-000.txt  extracted_pdf_images_text_optimised.json
data/faiss_rerank/: faiss_metadata.json
data/qdrant_rerank/: qdrant_metadata.json
qdrant_storage/: raft_state.json
qdrant_storage/collections/askai_questions/0/: newest_clocks.json
qdrant_storage/collections/askai_questions/0/segments/443f6efb-f253-4d9d-8fc1-c312b4cca930/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/askai_questions/0/segments/6f895039-e1ca-4e97-b4ac-0f6d40aa1dc9/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/askai_questions/0/segments/ad1f5086-3932-4700-936e-f8ab733fdd6d/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/pdf_image_collection/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/self_rag_collection/: config.json
qdrant_storage/collections/self_rag_collection/0/: newest_clocks.json
qdrant_storage/collections/test_collection/: config.json
qdrant_storage/collections/test_collection/0/: newest_clocks.json
temp/: docrag.html  index.html
utils/: app.py  docrag.py  extract_image.py  extract_pdf_to_txt.py  load_data_qurant.py  multi_modal_RAG_qrant.py  pdf_data_extract.py  pdf_image.py  qrant.py  test_rag.py  test_rag_v2.py  testrag_faiss.py  trash_image_model.py
(+115 files in other folders)
